<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="l_initiator_type">ინიციატორი:</string>
    <string name="detailed">Detailed: </string>
    <string name="error">Error</string>
    <string name="app_name">Socar Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="error_locate_failed">Unable to locate database file. Check error log for more information.</string>
    <string name="my_location">ჩემი ადგილმდებარეობა</string>
    <string name="compass">კომპასი</string>
    <string name="enable_disable_zoom">Enable/Disable Zoom</string>
    <string name="search">ძებნა</string>
    <string name="select">არჩევა</string>
    <string name="clear">გასუფთავება</string>
    <string name="disable_enable_motion">disable/enable motion</string>
    <string name="l_region">რეგიონი</string>
    <string name="l_subregion">რაიონი</string>
    <string name="l_zone">ზონა</string>
    <string name="l_cusid">აბონენტის #</string>
    <string name="l_customer">აბონენტი</string>
    <string name="goto_center">რუკის შუაში</string>
    <string name="l_city">ქალაქი</string>
    <string name="l_street">ქუჩა</string>
    <string name="title_activity_customer_search">აბონენტის ძებნა</string>
    <string name="scan_customer_barcode">Barcode</string>
    <string name="title_activity_customer_detail">აბონენტის ინფორმაცია</string>
    <string name="map_manipulate">რუკის პარამეტრები</string>
    <string name="building_select">შენობები</string>
    <string name="mi_show_tiles">Show Tiles</string>
    <string name="mi_hide_tiles">Hide Tiles</string>
    <string name="cus_meter">აბონენტის მრიცხველები</string>
    <string name="demage">დაზიანების დაფიქსირება</string>
    <string name="comment">აღწერა</string>
    <string name="distinct_meter">საუბნო მრიცხველები</string>
    <string name="socar_db">/mnt/sdcard/socardb/mydb.sqlite</string>
    <string name="style_file">/mnt/sdcard/socardb/spatialite_map_style.xml</string>
    <string name="tiles_path">/mnt/sdcard/socardb/tiles</string>
    <string name="settings_db">/mnt/sdcard/socardb/settings.sqlite</string>
    <string name="spatial_db">/mnt/sdcard/socardb/spatial.sqlite</string>
    <string name="barcode_apk">/mnt/sdcard/socardb/CBarCode.apk</string>
    <string name="tile_source">getmap.jsp?</string>
    <string name="with_buildings">შენობაზე მიბმული</string>
    <string name="add_cus_meter">აბონენტის მრიცხველის დამატება</string>
    <string name="add_distinct_meter">საუბნო მრიცხველის დამატება</string>
    <string name="title_activity_building_customers">შენობაზე მიბმული აბონენტები</string>
    <string name="cancel">დახურვა</string>
    <string name="save">შენახვა</string>
    <string name="address">მისამართი</string>
    <string name="add">დამატება</string>
    <string name="info">აღწერა</string>
    <string name="delete">წაშლა</string>
    <string name="do_you_want_to_delete">გინდათ ჩანაწერის წაშლა???</string>
    <string name="do_you_want_to_empty">გინდათ გასუფთავება???</string>
    <string name="change">შეცვლა</string>
    <string name="new_value">ახალი მნიშვნელობა:</string>
    <string name="l_demage_type">დაზიანების ტიპი</string>
    <string name="l_type">ტიპი:</string>
    <string name="l_time">დრო: </string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="l_all_zone">All zones</string>
    <string name="l_also_tiles">Download also tiles</string>
    <string name="l_zones">Zones</string>
    <string name="loading">Loading</string>
    <string name="l_download">Download</string>
    <string name="working_offline"> Working offline</string>
    <string name="working_online"> Working online</string>
    <string name="going_offline"> Going offline</string>
    <string name="going_online"> Going online</string>
    <string name="select_at_least_one_cust">select at least one customer!!!</string>
    <string name="snap_to_location_enabled">Snap to position is activated</string>
    <string name="snap_to_location_disabled">Snap to position is disabled</string>
    <string name="l_download_file" formatted="false"><![CDATA[Downloading file size=%s, downloaded=%s]]></string>
    <string name="title_activity_accident_create">AccidentCreateActivity</string>
    <string name="l_update_tiles">Update map</string>
    <string name="l_update_tiles_progress">Update map progress</string>
    <string name="tiles_dir">/mnt/sdcard/osmdroid/tiles/SocarMap</string>
    <string name="nothing_to_download">Nothing to download</string>
    <string name="add_building">შენობის დამატება</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="error_last_location_unknown">The last location is unknown</string>
    <string name="title_activity_add_degree">AddDegree</string>

</resources>